# projectz

./: .env  .pre-commit-config.yaml  Makefile  README.md  important.txt.txt  requirements.txt
backend/: pyproject.toml  setup.cfg
backend/src/projectz/: constants.py
backend/src/projectz/db/: db_utils.py
backend/src/projectz/db/models/: __init__.py  message.py  users.py
client/projectz-client/src/: App.tsx  ChatRoom.tsx  Props.tsx  index.css
projectz-client/: package-lock.json  package.json
projectz-client/src/: App.tsx  ChatRoom.tsx  MessageInput.tsx  MessageList.tsx  index.css  main.tsx  scrollbar.css  spring.css  springAnim.py
