[metadata]
name = projectz
description = a python app for workout logging
author = Yoav Benizri
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
version = 0.0.1
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
packages =
    projectz
install_requires =
    requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no
